force-app/main/default/objects/copado__Scratch_Org_Definition__c/copado__Scratch_Org_Definition__c.object-meta.xml
<CustomObject>
    <label>Scratch Org Definition</label>
    <nameField>
        <label>Scratch Org Definitions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scratch Org Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>