force-app/main/default/objects/copado__Scratch_Org_Definition__c/fields/copado__Developer_Hub_Org__c.field-meta.xml
<CustomField>
    <fullName>copado__Developer_Hub_Org__c</fullName>
    <label>Developer Hub Org</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>copado__Org__c.copado__is_Developer_Hub_Org__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Only developer hub credentials can be selected</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>copado__Org__c</referenceTo>
    <relationshipLabel>Scratch Org Definitions</relationshipLabel>
    <relationshipName>Scratch_Org_Definitions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>