force-app/main/default/objects/copado__Scratch_Org_Definition__c/fields/copado__Duration_in_days__c.field-meta.xml
<CustomField>
    <fullName>copado__Duration_in_days__c</fullName>
    <defaultValue>7</defaultValue>
    <label>Duration in days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>