force-app/main/default/objects/copado__Scratch_Org_Definition__c/fields/copado__Scratch_Org_Definition_JSON__c.field-meta.xml
<CustomField>
    <fullName>copado__Scratch_Org_Definition_JSON__c</fullName>
    <label>Scratch Org Definition JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>