force-app/main/default/objects/copado__Scratch_Org_Definition__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>copado__Developer_Hub_Org__c</columns>
    <columns>copado__Duration_in_days__c</columns>
    <columns>copado__Scratch_Org_Definition_JSON__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>